<resources>
    <string name="app_name">ProjetoFaculdade</string>
    <string name="nameProject">Community Aid</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="txt_button_enter">Entrar</string>
    <string name="txt_esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="txt_buttonToRegister"> <font color="#FF000000">Não tem conta?</font> <font color="#4E10DA">Crie sua conta agora!</font></string>


    //Register
    <string name="titulo_principal2">Crie sua conta</string>
    <string name="nome_completo1">Nome Completo</string>
    <string name="hint_NomeCompleto2">Digite seu nome</string>
    <string name="e_mail">E-mail</string>
    <string name="hint_Email2">Digite seu E-mail</string>
    <string name="senha">Senha</string>
    <string name="hint_Senha2">Digite sua senha</string>

    <string name="empresa">Empresa</string>
    <string name="Pessoa_fisica">Pessoa Física</string>
    <string name="cadastrar">cadastre-se</string>

    //Profile
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="nome_so_usuario">Nome do Usuário</string>
    <string name="descricao">descrição do usuário</string>
    <string name="localizacao">Localização</string>
    <string name="posts">POSTS</string>
    <string name="nome_do_usuario2">Nome do usuário</string>
    <string name="texto1">Bom dia! Aqui na prefeitura da cidade Notamos que os cachorros de rua estão passando por dificuldades na chuva, alguma empresa gostaria de fazer algumas casinhas para que sirvam de abrigos para os cachorros? </string>
    <string name="number4">4</string>
    <string name="number3">3</string>
    <string name="texto2">Boa Noite! Estamos com novos planos para ajudar os mais necessitados no municipio</string>

    //EditProject
    <string name="TitleEditProject">Editar Projeto</string>
    <string name="nameUserProfile">Nome do Usuário</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="edit">Editar</string>

    <string name="textPublicationProject">Publicar Projeto</string>
    <string name="textButtonPublication">Publicar</string>
    <string name="atualizar">\n</string>

    <string name="perfil"> editar foto do perfil </string>
    <string name="hintname"> Nome</string>
    <string name="hintdescription"> descricao</string>
    <string name="email"> E-email</string>
    <string name="hintemail"> E-mail</string>
    <string name="txt_buttom_upload"> Atualizar </string>

    <string name="app_name1">NetworkConection</string>
    <string name="go_to_web">Go to Web</string>
    <string name="created_by">Repositório criado por: %s</string>
    <string name="title1">Título: %s</string>
    <string name="description1">Descrição: %s</string>
    <string name="welcome_message">Bem vindos a listagem dos Repositórios do GitHub do Professor</string>
    <string name="error_message">Aconteceu um erro por aqui, tente novamente!</string>
    <string name="empty_message">Ops, parece que a lista está vazia!</string>
</resources>