<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            :textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/perfil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="200dp"
            > </TextView>

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintname"
            android:padding="10dp"
            android:layout_margin="20dp">
        </EditText>
        <EditText
            android:id="@+id/edit_descrição"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintdescription"
            android:padding="10dp"
            android:layout_margin="20dp">
    </EditText>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/hint_email"
            android:padding="10dp">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_buttom_upload"
            android:padding="14dp"
            android:textSize="15dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/blue">

        </Button>

    </LinearLayout>
