<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/titulo_principal2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/nome_completo1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_NomeCompleto2"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Email2"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Senha2"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp">


            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="35dp"
                android:gravity="left"
                android:text="@string/empresa"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/Pessoa_fisica"
                android:textColor="@color/black"
                android:textStyle="bold"

                />
        </RadioGroup>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:padding="8sp"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            />

    </LinearLayout>
</ScrollView>
