<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="120dp"
            android:layout_marginHorizontal="65dp"
            android:textSize="35dp"/>

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintname"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/background_edittext"
            android:padding="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="20dp"
            />

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintdescription"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"/>


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/black"
            android:hint="@string/hint_email"
            android:padding="10dp" />


        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:background="@drawable/background_edittext"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/black"
            android:hint="password"
            android:padding="10dp" />

        <Button
            android:id="@+id/updateUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_buttom_upload"
            android:textColor="@color/white"
            android:padding="14dp"
            android:textSize="15dp"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="60dp"/>



    </LinearLayout>
</ScrollView>