<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPublicationProject"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/container_user"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="344dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"/>


        <ImageView
            android:id="@+id/imageuser2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_user"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="344dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="100dp"
            android:text="@string/nameUserProfile"
            android:textColor="@color/black"
            android:layout_marginTop="35dp"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTitulodaPublicação"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_edittext"
            />

        <EditText
            android:id="@+id/editPublicação"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="210dp"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/description"
            android:padding="10dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="400dp"
            android:src="@drawable/foto"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="100dp"
            android:text="Foto"
            android:textColor="@color/black"
            android:layout_marginTop="400dp"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/publicationProjct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="500dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:text="@string/textButtonPublication"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24dp" />



        <include
            android:id="@+id/tabBar"
            layout="@layout/activity_menu" />
    </FrameLayout>
</LinearLayout>